lib/Sema/TypeCheckDecl.cpp
@@ -1477,6 +1477,15 @@ public:
     return diagnoser.offendingType;
   }
 };
+
+/// A uniquely-typed boolean to reduce the chances of accidentally inverting
+/// a check.
+///
+/// \see checkTypeAccessibility
+enum class DowngradeToWarning: bool {
+  No,
+  Yes
+};
 } // end anonymous namespace
 
 /// Checks if the access scope of the type described by \p TL contains
@@ -1526,11 +1535,31 @@ static void checkTypeAccessibilityImpl(
   diagnose(*typeAccessScope, complainRepr);
 }
 
+/// Checks if the access scope of the type described by \p TL is valid for the
+/// type to be the type of \p context. If it isn't, calls \p diagnose with a
+/// TypeRepr representing the offending part of \p TL.
+///
+/// The TypeRepr passed to \p diagnose may be null, in which case a particular
+/// part of the type that caused the problem could not be found. The DeclContext
+/// is never null. The DowngradeToWarning parameter is a hack to deal with
+/// early versions of Swift 3 not diagnosing certain access violations.
 static void checkTypeAccessibility(
     TypeChecker &TC, TypeLoc TL, const ValueDecl *context,
-    llvm::function_ref<void(const DeclContext *, const TypeRepr *)> diagnose) {
-  checkTypeAccessibilityImpl(TC, TL, context->getFormalAccessScope(),
-                             context->getDeclContext(), diagnose);
+    llvm::function_ref<void(const DeclContext *, const TypeRepr *,
+                            DowngradeToWarning)> diagnose) {
+  const DeclContext *contextAccessScope = context->getFormalAccessScope();
+  checkTypeAccessibilityImpl(TC, TL, contextAccessScope,
+                             context->getDeclContext(),
+                             [=](const DeclContext *requiredAccessScope,
+                                 const TypeRepr *offendingTR) {
+    auto downgradeToWarning = DowngradeToWarning::No;
+    if (contextAccessScope && !isa<ModuleDecl>(contextAccessScope)) {
+      // Swift 3.0.0 mistakenly didn't diagnose any issues when the context
+      // access scope represented a private or fileprivate level.
+      downgradeToWarning = DowngradeToWarning::Yes;
+    }
+    diagnose(requiredAccessScope, offendingTR, downgradeToWarning);
+  });
 }
 
 /// Highlights the given TypeRepr, and adds a note pointing to the type's
@@ -1568,6 +1597,10 @@ static void checkGenericParamAccessibility(TypeChecker &TC,
   } accessibilityErrorKind;
   const DeclContext *minAccessScope = nullptr;
   const TypeRepr *complainRepr = nullptr;
+
+  // Swift 3.0.0 mistakenly didn't diagnose any issues when the context access
+  // scope represented a private or fileprivate level.
+  bool shouldDowngradeToWarning = accessScope && !isa<ModuleDecl>(accessScope);
 
   for (auto param : *params) {
     if (param->getInherited().empty())
@@ -1624,7 +1657,10 @@ static void checkGenericParamAccessibility(TypeChecker &TC,
     bool isExplicit =
       owner->getAttrs().hasAttribute<AccessibilityAttr>() ||
       owner->getDeclContext()->getAsProtocolOrProtocolExtensionContext();
-    auto diag = TC.diagnose(owner, diag::generic_param_access,
+    auto diagID = diag::generic_param_access;
+    if (shouldDowngradeToWarning)
+      diagID = diag::generic_param_access_warn;
+    auto diag = TC.diagnose(owner, diagID,
                             owner->getDescriptiveKind(), isExplicit,
                             contextAccess, minAccess,
                             accessibilityErrorKind);
@@ -1690,13 +1726,16 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
         checkTypeAccessibility(TC, TypeLoc::withoutLoc(theVar->getType()),
                                theVar,
                                [&](const DeclContext *typeAccessScope,
-                                   const TypeRepr *complainRepr) {
+                                   const TypeRepr *complainRepr,
+                                   DowngradeToWarning downgradeToWarning) {
           auto typeAccess =
               accessibilityFromScopeForDiagnostics(typeAccessScope);
           bool isExplicit =
             theVar->getAttrs().hasAttribute<AccessibilityAttr>();
-          auto diag = TC.diagnose(P->getLoc(),
-                                  diag::pattern_type_access_inferred,
+          auto diagID = diag::pattern_type_access_inferred;
+          if (downgradeToWarning == DowngradeToWarning::Yes)
+            diagID = diag::pattern_type_access_inferred_warn;
+          auto diag = TC.diagnose(P->getLoc(), diagID,
                                   theVar->isLet(),
                                   isTypeContext,
                                   isExplicit,
@@ -1724,12 +1763,16 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
 
       checkTypeAccessibility(TC, TP->getTypeLoc(), anyVar,
                              [&](const DeclContext *typeAccessScope,
-                                 const TypeRepr *complainRepr) {
+                                 const TypeRepr *complainRepr,
+                                 DowngradeToWarning downgradeToWarning) {
         auto typeAccess = accessibilityFromScopeForDiagnostics(typeAccessScope);
         bool isExplicit =
           anyVar->getAttrs().hasAttribute<AccessibilityAttr>() ||
           anyVar->getDeclContext()->getAsProtocolOrProtocolExtensionContext();
-        auto diag = TC.diagnose(P->getLoc(), diag::pattern_type_access,
+        auto diagID = diag::pattern_type_access;
+        if (downgradeToWarning == DowngradeToWarning::Yes)
+          diagID = diag::pattern_type_access_warn;
+        auto diag = TC.diagnose(P->getLoc(), diagID,
                                 anyVar->isLet(),
                                 isTypeContext,
                                 isExplicit,
@@ -1746,10 +1789,14 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
 
     checkTypeAccessibility(TC, TAD->getUnderlyingTypeLoc(), TAD,
                            [&](const DeclContext *typeAccessScope,
-                               const TypeRepr *complainRepr) {
+                               const TypeRepr *complainRepr,
+                               DowngradeToWarning downgradeToWarning) {
       auto typeAccess = accessibilityFromScopeForDiagnostics(typeAccessScope);
       bool isExplicit = TAD->getAttrs().hasAttribute<AccessibilityAttr>();
-      auto diag = TC.diagnose(TAD, diag::type_alias_underlying_type_access,
+      auto diagID = diag::type_alias_underlying_type_access;
+      if (downgradeToWarning == DowngradeToWarning::Yes)
+        diagID = diag::type_alias_underlying_type_access_warn;
+      auto diag = TC.diagnose(TAD, diagID,
                               isExplicit, TAD->getFormalAccess(),
                               typeAccess);
       highlightOffendingType(TC, diag, complainRepr);
@@ -1768,37 +1815,45 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
     } accessibilityErrorKind;
     const DeclContext *minAccessScope = nullptr;
     const TypeRepr *complainRepr = nullptr;
+    auto downgradeToWarning = DowngradeToWarning::No;
 
     std::for_each(assocType->getInherited().begin(),
                   assocType->getInherited().end(),
                   [&](TypeLoc requirement) {
       checkTypeAccessibility(TC, requirement, assocType,
                              [&](const DeclContext *typeAccessScope,
-                                 const TypeRepr *thisComplainRepr) {
+                                 const TypeRepr *thisComplainRepr,
+                                 DowngradeToWarning downgradeDiag) {
         if (!minAccessScope ||
             typeAccessScope->isChildContextOf(minAccessScope) ||
             (!complainRepr && typeAccessScope == minAccessScope)) {
           minAccessScope = typeAccessScope;
           complainRepr = thisComplainRepr;
           accessibilityErrorKind = AEK_Requirement;
+          downgradeToWarning = downgradeDiag;
         }
       });
     });
     checkTypeAccessibility(TC, assocType->getDefaultDefinitionLoc(), assocType,
                            [&](const DeclContext *typeAccessScope,
-                               const TypeRepr *thisComplainRepr) {
+                               const TypeRepr *thisComplainRepr,
+                               DowngradeToWarning downgradeDiag) {
       if (!minAccessScope ||
           typeAccessScope->isChildContextOf(minAccessScope) ||
           (!complainRepr && typeAccessScope == minAccessScope)) {
         minAccessScope = typeAccessScope;
         complainRepr = thisComplainRepr;
         accessibilityErrorKind = AEK_DefaultDefinition;
+        downgradeToWarning = downgradeDiag;
       }
     });
 
     if (minAccessScope) {
       auto minAccess = accessibilityFromScopeForDiagnostics(minAccessScope);
-      auto diag = TC.diagnose(assocType, diag::associated_type_access,
+      auto diagID = diag::associated_type_access;
+      if (downgradeToWarning == DowngradeToWarning::Yes)
+        diagID = diag::associated_type_access_warn;
+      auto diag = TC.diagnose(assocType, diagID,
                               assocType->getFormalAccess(),
                               minAccess, accessibilityErrorKind);
       highlightOffendingType(TC, diag, complainRepr);
@@ -1824,10 +1879,14 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
         return;
       checkTypeAccessibility(TC, *rawTypeLocIter, ED,
                              [&](const DeclContext *typeAccessScope,
-                                 const TypeRepr *complainRepr) {
+                                 const TypeRepr *complainRepr,
+                                 DowngradeToWarning downgradeToWarning) {
         auto typeAccess = accessibilityFromScopeForDiagnostics(typeAccessScope);
         bool isExplicit = ED->getAttrs().hasAttribute<AccessibilityAttr>();
-        auto diag = TC.diagnose(ED, diag::enum_raw_type_access,
+        auto diagID = diag::enum_raw_type_access;
+        if (downgradeToWarning == DowngradeToWarning::Yes)
+          diagID = diag::enum_raw_type_access_warn;
+        auto diag = TC.diagnose(ED, diagID,
                                 isExplicit, ED->getFormalAccess(),
                                 typeAccess);
         highlightOffendingType(TC, diag, complainRepr);
@@ -1861,10 +1920,14 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
         return;
       checkTypeAccessibility(TC, *superclassLocIter, CD,
                              [&](const DeclContext *typeAccessScope,
-                                 const TypeRepr *complainRepr) {
+                                 const TypeRepr *complainRepr,
+                                 DowngradeToWarning downgradeToWarning) {
         auto typeAccess = accessibilityFromScopeForDiagnostics(typeAccessScope);
         bool isExplicit = CD->getAttrs().hasAttribute<AccessibilityAttr>();
-        auto diag = TC.diagnose(CD, diag::class_super_access,
+        auto diagID = diag::class_super_access;
+        if (downgradeToWarning == DowngradeToWarning::Yes)
+          diagID = diag::class_super_access_warn;
+        auto diag = TC.diagnose(CD, diagID,
                                 isExplicit, CD->getFormalAccess(),
                                 typeAccess);
         highlightOffendingType(TC, diag, complainRepr);
@@ -1879,18 +1942,21 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
 
     const DeclContext *minAccessScope = nullptr;
     const TypeRepr *complainRepr = nullptr;
+    auto downgradeToWarning = DowngradeToWarning::No;
 
     std::for_each(proto->getInherited().begin(),
                   proto->getInherited().end(),
                   [&](TypeLoc requirement) {
       checkTypeAccessibility(TC, requirement, proto,
                              [&](const DeclContext *typeAccessScope,
-                                 const TypeRepr *thisComplainRepr) {
+                                 const TypeRepr *thisComplainRepr,
+                                 DowngradeToWarning downgradeDiag) {
         if (!minAccessScope ||
             typeAccessScope->isChildContextOf(minAccessScope) ||
             (!complainRepr && typeAccessScope == minAccessScope)) {
           minAccessScope = typeAccessScope;
           complainRepr = thisComplainRepr;
+          downgradeToWarning = downgradeDiag;
         }
       });
     });
@@ -1898,7 +1964,10 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
     if (minAccessScope) {
       auto minAccess = accessibilityFromScopeForDiagnostics(minAccessScope);
       bool isExplicit = proto->getAttrs().hasAttribute<AccessibilityAttr>();
-      auto diag = TC.diagnose(proto, diag::protocol_refine_access,
+      auto diagID = diag::protocol_refine_access;
+      if (downgradeToWarning == DowngradeToWarning::Yes)
+        diagID = diag::protocol_refine_access_warn;
+      auto diag = TC.diagnose(proto, diagID,
                               isExplicit, proto->getFormalAccess(), minAccess);
       highlightOffendingType(TC, diag, complainRepr);
     }
@@ -1910,28 +1979,34 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
 
     const DeclContext *minAccessScope = nullptr;
     const TypeRepr *complainRepr = nullptr;
+    auto downgradeToWarning = DowngradeToWarning::No;
     bool problemIsElement = false;
+
     for (auto &P : *SD->getIndices()) {
       checkTypeAccessibility(TC, P->getTypeLoc(), SD,
                              [&](const DeclContext *typeAccessScope,
-                                 const TypeRepr *thisComplainRepr) {
+                                 const TypeRepr *thisComplainRepr,
+                                 DowngradeToWarning downgradeDiag) {
         if (!minAccessScope ||
             typeAccessScope->isChildContextOf(minAccessScope) ||
             (!complainRepr && typeAccessScope == minAccessScope)) {
           minAccessScope = typeAccessScope;
           complainRepr = thisComplainRepr;
+          downgradeToWarning = downgradeDiag;
         }
       });
     }
 
     checkTypeAccessibility(TC, SD->getElementTypeLoc(), SD,
                            [&](const DeclContext *typeAccessScope,
-                               const TypeRepr *thisComplainRepr) {
+                               const TypeRepr *thisComplainRepr,
+                               DowngradeToWarning downgradeDiag) {
       if (!minAccessScope ||
           typeAccessScope->isChildContextOf(minAccessScope) ||
           (!complainRepr && typeAccessScope == minAccessScope)) {
         minAccessScope = typeAccessScope;
         complainRepr = thisComplainRepr;
+        downgradeToWarning = downgradeDiag;
         problemIsElement = true;
       }
     });
@@ -1941,7 +2016,10 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
       bool isExplicit =
         SD->getAttrs().hasAttribute<AccessibilityAttr>() ||
         SD->getDeclContext()->getAsProtocolOrProtocolExtensionContext();
-      auto diag = TC.diagnose(SD, diag::subscript_type_access,
+      auto diagID = diag::subscript_type_access;
+      if (downgradeToWarning == DowngradeToWarning::Yes)
+        diagID = diag::subscript_type_access_warn;
+      auto diag = TC.diagnose(SD, diagID,
                               isExplicit,
                               SD->getFormalAccess(),
                               minAccess,
@@ -1961,7 +2039,7 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
 
     checkGenericParamAccessibility(TC, fn->getGenericParams(), fn);
 
-    // This must stay in sync with diag::associated_type_access.
+    // This must stay in sync with diag::function_type_access.
     enum {
       FK_Function = 0,
       FK_Method,
@@ -1970,16 +2048,20 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
 
     const DeclContext *minAccessScope = nullptr;
     const TypeRepr *complainRepr = nullptr;
+    auto downgradeToWarning = DowngradeToWarning::No;
+
     for (auto *PL : fn->getParameterLists().slice(isTypeContext)) {
       for (auto &P : *PL) {
         checkTypeAccessibility(TC, P->getTypeLoc(), fn,
                                [&](const DeclContext *typeAccessScope,
-                                   const TypeRepr *thisComplainRepr) {
+                                   const TypeRepr *thisComplainRepr,
+                                   DowngradeToWarning downgradeDiag) {
           if (!minAccessScope ||
               typeAccessScope->isChildContextOf(minAccessScope) ||
               (!complainRepr && typeAccessScope == minAccessScope)) {
             minAccessScope = typeAccessScope;
             complainRepr = thisComplainRepr;
+            downgradeToWarning = downgradeDiag;
           }
         });
       }
@@ -1989,12 +2071,14 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
     if (auto FD = dyn_cast<FuncDecl>(fn)) {
       checkTypeAccessibility(TC, FD->getBodyResultTypeLoc(), FD,
                              [&](const DeclContext *typeAccessScope,
-                                 const TypeRepr *thisComplainRepr) {
+                                 const TypeRepr *thisComplainRepr,
+                                 DowngradeToWarning downgradeDiag) {
         if (!minAccessScope ||
             typeAccessScope->isChildContextOf(minAccessScope) ||
             (!complainRepr && typeAccessScope == minAccessScope)) {
           minAccessScope = typeAccessScope;
           complainRepr = thisComplainRepr;
+          downgradeToWarning = downgradeDiag;
           problemIsResult = true;
         }
       });
@@ -2005,7 +2089,10 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
       bool isExplicit =
         fn->getAttrs().hasAttribute<AccessibilityAttr>() ||
         D->getDeclContext()->getAsProtocolOrProtocolExtensionContext();
-      auto diag = TC.diagnose(fn, diag::function_type_access,
+      auto diagID = diag::function_type_access;
+      if (downgradeToWarning == DowngradeToWarning::Yes)
+        diagID = diag::function_type_access_warn;
+      auto diag = TC.diagnose(fn, diagID,
                               isExplicit,
                               fn->getFormalAccess(),
                               minAccess,
@@ -2024,9 +2111,13 @@ static void checkAccessibility(TypeChecker &TC, const Decl *D) {
       return;
     checkTypeAccessibility(TC, EED->getArgumentTypeLoc(), EED,
                            [&](const DeclContext *typeAccessScope,
-                               const TypeRepr *complainRepr) {
+                               const TypeRepr *complainRepr,
+                               DowngradeToWarning downgradeToWarning) {
       auto typeAccess = accessibilityFromScopeForDiagnostics(typeAccessScope);
-      auto diag = TC.diagnose(EED, diag::enum_case_access,
+      auto diagID = diag::enum_case_access;
+      if (downgradeToWarning == DowngradeToWarning::Yes)
+        diagID = diag::enum_case_access_warn;
+      auto diag = TC.diagnose(EED, diagID,
                               EED->getFormalAccess(), typeAccess);
       highlightOffendingType(TC, diag, complainRepr);
     });
